# trusted-services

./: .checkpatch  .clang-format  .editorconfig  .gitignore  .readthedocs.yaml  license.rst  readme.rst  requirements.txt  setup.cfg  setup.py
c_picker/: __init__.py  coverage.py  picker.py  runner.py
cmake/: Coverage.cmake  FindLibClang.cmake  UnitTest.cmake
common/: cpputest-cmake-fix.patch  main.cpp
deployments/: deployment.cmake
deployments/attestation/: attestation.cmake
deployments/attestation/opteesp/: CMakeLists.txt  attestation_sp.c  attestation_sp.h  default_attestation.dts.in  optee_sp_user_defines.h
deployments/attestation/sp/: CMakeLists.txt  default_attestation.dts.in
deployments/block-storage/: block-storage.cmake
deployments/block-storage/config/semihosted-opteesp/: CMakeLists.txt  default_block-storage.dts.in
deployments/component-test/: component-test.cmake
deployments/component-test/linux-pc/: CMakeLists.txt
deployments/crypto/: crypto.cmake
deployments/crypto/opteesp/: CMakeLists.txt  crypto_sp.c  crypto_sp.h  default_crypto.dts.in  optee_sp_user_defines.h
deployments/env-test/: env-test.cmake  env_test.cmake
deployments/env-test/opteesp/: CMakeLists.txt  default_env-test.dts.in  env_test.c  env_test.h  env_test_config.c  env_test_config.h  env_test_tests.c  env_test_tests.h  optee_sp_user_defines.h
deployments/env-test/sp/: CMakeLists.txt  default_env-test.dts.in
deployments/fwu/: fwu.cmake
deployments/fwu-tool/: fwu.cmake
deployments/fwu/config/fwu-app-linux-pc/: CMakeLists.txt
deployments/internal-trusted-storage/: internal-trusted-storage.cmake
deployments/internal-trusted-storage/config/shared-flash-opteesp/: CMakeLists.txt  default_internal-trusted-storage.dts.in
deployments/internal-trusted-storage/opteesp/: CMakeLists.txt  default_internal-trusted-storage.dts.in  optee_sp_user_defines.h  sp.c  sp.h
deployments/internal-trusted-storage/sp/: CMakeLists.txt  default_internal-trusted-storage.dts.in
deployments/libsp/opteesp/: CMakeLists.txt  LibspConfig.cmake.in
deployments/libts/: libts-import.cmake  libts.cmake
deployments/libts/arm-linux/: CMakeLists.txt
deployments/libts/linux-pc/: CMakeLists.txt
deployments/newlib/opteesp/: CMakeLists.txt
deployments/platform-inspect/: platform-inspect.cmake
deployments/protected-storage/: protected-storage.cmake
deployments/protected-storage/opteesp/: CMakeLists.txt  default_protected-storage.dts.in  optee_sp_user_defines.h  sp.c  sp.h
deployments/protected-storage/sp/: CMakeLists.txt  default_protected-storage.dts.in
deployments/psa-api-test/: arch_test_runner.c  psa-api-test.cmake  service_under_test.h
deployments/psa-api-test/crypto/arm-linux/: CMakeLists.txt
deployments/psa-api-test/crypto/linux-pc/: CMakeLists.txt
deployments/psa-api-test/initial_attestation/arm-linux/: CMakeLists.txt
deployments/psa-api-test/internal_trusted_storage/linux-pc/: CMakeLists.txt
deployments/se-proxy/: se-proxy.cmake  se_proxy_interfaces.h
deployments/se-proxy/opteesp/: CMakeLists.txt  default_se-proxy.dts.in  optee_sp_user_defines.h  se_proxy_sp.h  service_proxy_factory.c
deployments/secure-storage/opteesp/: CMakeLists.txt  default_secure-storage.dts.in  sp.c  sp.h
deployments/sfs-demo/: sfs-demo.cmake
deployments/sfs-demo/opteesp/: CMakeLists.txt  default_sfs-demo.dts.in  optee_sp_user_defines.h  sp.c  sp.h
deployments/sfs-demo/sp/: CMakeLists.txt  default_sfs-demo.dts.in
deployments/smm-gateway/: smm-gateway.cmake  smm_gateway.h
deployments/smm-gateway/config/default-opteesp/: CMakeLists.txt  default_smm-gateway.dts.in
deployments/smm-gateway/opteesp/: CMakeLists.txt  default_smm-gateway.dts.in  optee_sp_user_defines.h  smm_gateway_sp.c  smm_gateway_sp.h
deployments/spm-test2/opteesp/: CMakeLists.txt  default_spm_test2.dts.in
deployments/spm-test3/opteesp/: CMakeLists.txt  default_spm_test3.dts.in
deployments/ts-arch-test/: ts-arch-test.cmake
deployments/ts-demo/: ts-demo.cmake  ts-demo.cpp
deployments/ts-fw-test/: ts-fw-test.cmake
deployments/ts-remote-test/: ts-remote-test.cmake  ts-remote-test.cpp
deployments/ts-service-test/: ts-service-test.cmake
deployments/ts-service-test/linux-pc/: CMakeLists.txt
deployments/uefi-test/: uefi-test.cmake
docs/: Makefile  SphinxBuild.cmake  conf.py  global_substitutions.txt  implementing_tests.rst  index.rst  requirements.txt  user_guide.rst
docs/certification/: index.rst  psa.rst
docs/components/: build_system.rst  c_picker.rst  code_coverage.rst  cppumock.rst  cpputest.rst  index.rst
docs/deployments/: index.rst  libraries.rst  secure-partitions.rst
docs/developer/: arch-overview.rst  build-instructions.rst  deployments.rst  docs-build.rst  index.rst  portability-model.rst  project-structure.rst  service-access-protocols.rst  service-deployment-model.rst  software-requirements.rst  writing-documentation.rst
docs/environments/: index.rst
docs/overview/: index.rst  introduction.rst
docs/project/: change-log.rst  coding-guidelines.rst  contributing.rst  glossary.rst  index.rst  license.rst  maintainers.rst  todo.rst  versioning_policy.rst  writing-documentation.rst
docs/quickstart/: optee-testing.rst  pc-testing.rst
docs/resources/: sequence_print_to_eeprom.puml  sequence_print_to_eeprom_mock.puml
docs/security/: generic-data-flow.graphml  index.rst  threat-model.rst
docs/services/: block-storage-service-description.rst  fwu-service-description.rst  index.rst  secure-storage-service-description.rst  uefi-smm-services.rst
docs/standards/: ff-a.rst  index.rst  psa.rst  psa_certification.rst
docs/target-platforms/: aem-fvp.rst  index.rst
docs/uml/: libsp_functions.puml
environments/arm-linux/: default_toolchain_file.cmake
environments/linux-pc/: default_toolchain_file.cmake
environments/opteesp/: ExportSp.cmake  component.cmake  default_toolchain_file.cmake  libsp_entry.c  newlib_sp_assert.c  sp.ld.S  sp.mk.in  sp_entry.c  sp_pkg.json.in  sp_trace.c
environments/posix/: component.cmake  posix_trace.c
environments/sp/: component.cmake  entry.S  sp.ld.S  (+5 more)
(+1097 files in other folders)
